--- a/i.html
+++ b/i.html
@@ -14,6 +14,7 @@ Hello!
 	<div class="title">
 		<h1>{{title}}</h1>
 		<h3 class="author">{{author}}</h3>
+		<img style="height:600" src={{src}}>
 		<img style="height:600" src={{src}}/>
 	</div>
 </script>
